--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,82 +18,84 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+    sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
+    flutter:
+        sdk: flutter
 
-  http: ^0.13.0
-  cupertino_icons: ^1.0.2
-  cached_network_image: ^2.5.1
-  flutter_staggered_grid_view: ^0.3.4
-  flutter_swiper: ^1.1.6
-  font_awesome_flutter: ^9.0.0
-  page_transition: ^1.1.7+6
-  provider: ^5.0.0
-  image_picker: ^0.7.3
-  mime_type: ^1.0.0
-  rxdart: ^0.25.0
-  shared_preferences: ^2.0.5
+    http: ^0.13.0
+    cupertino_icons: ^1.0.2
+    cached_network_image: ^2.5.1
+    flutter_staggered_grid_view: ^0.3.4
+    flutter_swiper: ^1.1.6
+    font_awesome_flutter: ^9.0.0
+    page_transition: ^1.1.7+6
+    provider: ^5.0.0
+    image_picker: ^0.7.3
+    mime_type: ^1.0.0
+    rxdart: ^0.25.0
+    shared_preferences: ^2.0.5
+    flutter_dotenv: ^5.0.2
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+    flutter_test:
+        sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-  uses-material-design: true
-  assets:
-    - assets/images/
-    - assets/icon/
+    uses-material-design: true
+    assets:
+        - assets/images/
+        - assets/icon/
+        - .env
 
-  fonts:
-    - family: Lato
-      fonts:
-        - asset: assets/fonts/Lato/Lato-Regular.ttf
-        - asset: assets/fonts/Lato/Lato-Bold.ttf
-          weight: 900
-        - asset: assets/fonts/Lato/Lato-Black.ttf
-          weight: 700
-        - asset: assets/fonts/Lato/Lato-Regular.ttf
-          weight: 500
-        - asset: assets/fonts/Lato/Lato-Light.ttf
-          weight: 300
-        - asset: assets/fonts/Lato/Lato-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/Lato/Lato-Italic.ttf
-          style: italic
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+    fonts:
+        - family: Lato
+          fonts:
+              - asset: assets/fonts/Lato/Lato-Regular.ttf
+              - asset: assets/fonts/Lato/Lato-Bold.ttf
+                weight: 900
+              - asset: assets/fonts/Lato/Lato-Black.ttf
+                weight: 700
+              - asset: assets/fonts/Lato/Lato-Regular.ttf
+                weight: 500
+              - asset: assets/fonts/Lato/Lato-Light.ttf
+                weight: 300
+              - asset: assets/fonts/Lato/Lato-Thin.ttf
+                weight: 100
+              - asset: assets/fonts/Lato/Lato-Italic.ttf
+                style: italic
+    # To add assets to your application, add an assets section, like this:
+    # assets:
+    #   - images/a_dot_burr.jpeg
+    #   - images/a_dot_ham.jpeg
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
+    # An image asset can refer to one or more resolution-specific "variants", see
+    # https://flutter.dev/assets-and-images/#resolution-aware.
 
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
+    # For details regarding adding assets from package dependencies, see
+    # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+    # To add custom fonts to your application, add a fonts section here,
+    # in this "flutter" section. Each entry in this list should have a
+    # "family" key with the font family name, and a "fonts" key with a
+    # list giving the asset and other descriptors for the font. For
+    # example:
+    # fonts:
+    #   - family: Schyler
+    #     fonts:
+    #       - asset: fonts/Schyler-Regular.ttf
+    #       - asset: fonts/Schyler-Italic.ttf
+    #         style: italic
+    #   - family: Trajan Pro
+    #     fonts:
+    #       - asset: fonts/TrajanPro.ttf
+    #       - asset: fonts/TrajanPro_Bold.ttf
+    #         weight: 700
+    #
+    # For details regarding fonts from package dependencies,
+    # see https://flutter.dev/custom-fonts/#from-packages
